making sausage - heavy cleanup will be required

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 *.~*~
 packages
+build/
+.pub/
+.project
+*.iml
+*.ipr
+*.iws
+.idea/
+*.dart.js
+*.js_
+*.js.deps
+*.js.map
 # custom <additional>
 pubspec.lock
 test_chattel.dart
