removed dlang cleaned up pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,26 +5,34 @@ homepage: https://github.com/patefacio/simple_schema
 description: >
   Provide declarative api for creating json schema
 dependencies:
-  id: ">=0.0.5"
-
-  json_schema: ">=1.0.0"
-
-  ebisu: ">=0.0.4"
-
-  ebisu_dlang: ">=0.0.4"
-
   quiver: "any"
-
-  logging: ">=0.7.1"
+  logging: "any"
 
 # custom <simple_schema dependencies>
+
+  id:
+    git: git://github.com/patefacio/id
+
+  ebisu:
+    git: git://github.com/patefacio/ebisu
+
+  json_schema:
+    git: git://github.com/patefacio/json_schema
+
 
 # end <simple_schema dependencies>
 
 dev_dependencies:
-  hop: ">=0.27.0"
+  unittest: ">=0.9.0 < 0.10.0"
+  browser: "any"
+  hop: "any"
+  hop_docgen: "any"
 
 # custom <simple_schema dev dependencies>
 # end <simple_schema dev dependencies>
 
+transformers:
+
+# custom <simple_schema transformers>
+# end <simple_schema transformers>
 
